--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 }
 
 .fundo {
-    background-image: linear-gradient(45deg, black, crimson);
+    background-image: url("https://images.unsplash.com/photo-1419242902214-272b3f66ee7a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=913&q=80");
     height: 100vh;
     color: white;
     font-family: arial, sans-serif;
